Issue #3377193: .admin-item .admin-item__link::before chevron not visible in forced colors mode

--- a/styles/base/_admin-item.scss
+++ b/styles/base/_admin-item.scss
@@ -66,6 +66,10 @@
       mask-size: 1em 1em;
       mask-repeat: no-repeat;
       mask-position: center center;
+
+      @media (forced-colors: active) {
+        background-color: linktext;
+      }
     }
 
     &:hover,
